examples/test/testpolicy12408.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12408
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key30: value33
      key21: value27
      key32: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value15
          key11: value26
          key39: value21
